--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "description": "js markdown 组件",
   "version": "0.1.0",
   "author": "AnHaijun",
+  "repository": "https://github.com/An-Haijun/js-markdown-plus",
+  "homepage": "https://github.com/An-Haijun/js-markdown-plus",
   "dependencies": {},
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
@@ -40,6 +42,14 @@
   "engines": {
     "node": ">= 0.8.0"
   },
-  "license": "MIT"
+  "license": "MIT",
+  "files": [
+    "dist",
+    "example",
+    "scripts",
+    "src",
+    "package.json",
+    "readme.md"
+  ]
 }
 
