--- a/package.json
+++ b/package.json
@@ -5,15 +5,16 @@
   "author": "AnHaijun",
   "repository": "https://github.com/An-Haijun/js-markdown-plus",
   "homepage": "https://github.com/An-Haijun/js-markdown-plus",
-  "dependencies": {},
+  "dependencies": {
+    "codemirror": "^5.48.2",
+    "highlight": "^0.2.4",
+    "lodash": "^4.17.15",
+    "mdjs": "^0.1.10"
+  },
   "devDependencies": {
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-preset-latest": "^6.24.1",
-    "codemirror": "^5.48.2",
     "cssnano": "^4.1.10",
-    "highlight": "^0.2.4",
-    "lodash": "^4.17.15",
-    "mdjs": "^0.1.10",
     "postcss-cssnext": "^3.1.0",
     "postcss-nested": "^4.1.2",
     "postcss-simple-vars": "^5.0.2",
