--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "codemirror": "^5.48.2",
     "highlight": "^0.2.4",
     "lodash": "^4.17.15",
+    "marked": "^0.7.0",
     "mdjs": "^0.1.10"
   },
   "devDependencies": {
@@ -53,4 +54,3 @@
     "readme.md"
   ]
 }
-
